--- a/index.html
+++ b/index.html
@@ -13,33 +13,35 @@
 <body>
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<header>
-		<!-- header, h1, logo etc content -->
-		<h1>There Can Be Only One Header One</h1>
-		<h2>Header Two</h2>
-		<h3>Header Three</h3>
-		<h4>Header Four</h4>
-		<p>A paragraph of lorem ipsum text. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eligendi.</p>
+		<img src="https://tinyurl.com/y2mxur8s" align="center">
 	</header>
+
+	<div class="siteinfo">
+		<div align="left">Portland, OR</div>
+		<div align="right">(503) 270-1711</div>
+	<div>
+
 
 	<nav>
 		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
 		<ul>
-			<li><a href="subpage-one.html">example link to subpage one</a></li>
-			<li><a href="#">link</a></li>
-			<li><a href="#">link</a></li>
+			<li><img src="https://tinyurl.com/yyld3onx"><a href="subpage-one.html">menu</a></li>
+			<li><a href="#">gallery</a></li>
+			<li><a href="#">location</a></li>
+			<li><a href="#">instagram</a><img src="https://tinyurl.com/yyld3onx"></li>
 		</ul>
 	</nav>
 	<main>
-		<blockquote>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus soluta vero fugiat saepe, tempore laboriosam nemo pariatur maxime sunt rerum."</blockquote>
 	<!-- Main content here -->
 		<div class="grid">
-			<div>Column 1</div>
-			<div>Column 2</div>
+			<div class="mainpic"><img src="https://tinyurl.com/y62ohxzz"></div>
+
+			<div class="maincontent">Snow Bunny Cafe is a new Korean based cafe located in the Pearl District from varieties serving <i>patbingsu</i> (Korean style shaved ice), coffee, lattes, milk tea, waffles, pastries, and salads on toast with a warm and welcoming environment. It is a cute perfect spot for a study or hangout with your friends.</div>
 		</div>
 	</main>
 	<footer>
 		<!-- footer content here -->
-		&copy; Team Awesome
+		<center>&copy; Snow Bunny Cafe Coffee & Tea 2019</center>
 	</footer>
 	<!-- link for jquery -->
 	<script
