--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script>
+  (function(d) {
+    var config = {
+      kitId: 'gpg1ltj',
+      scriptTimeout: 3000,
+      async: true
+    },
+    h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+  })(document);
+</script>
+	
 	<meta charset="UTF-8">
 	<title>Project One - Homepage</title>
 	<meta name="viewport" content="width=device-width">
@@ -21,22 +32,57 @@
 		<div align="right">(503) 270-1711</div>
 	<div>
 
-
+	
 	<nav>
 		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
 		<ul>
-			<li><img src="https://tinyurl.com/yyld3onx"><a href="subpage-one.html">menu</a></li>
+			<li><hr></li>
+			<li><a href="subpage-one.html">menu</a></li>
 			<li><a href="#">gallery</a></li>
 			<li><a href="#">location</a></li>
-			<li><a href="#">instagram</a><img src="https://tinyurl.com/yyld3onx"></li>
+			<li><a href="#">instagram</a></li>
+			<li><hr></li>
 		</ul>
 	</nav>
+
+	<section class="portfolio-experiment">
+  <a herf="menu.html">
+    <span class="text">menu</span>
+    <span class="line -right"></span>
+    <span class="line -top"></span>
+    <span class="line -left"></span>
+    <span class="line -bottom"></span>
+  </a>
+  <a href="gallery.html">
+    <span class="text">gallery</span>
+    <span class="line -right"></span>
+    <span class="line -top"></span>
+    <span class="line -left"></span>
+    <span class="line -bottom"></span>
+  </a>
+  <a href="location.html">
+    <span class="text">location</span>
+    <span class="line -right"></span>
+    <span class="line -top"></span>
+    <span class="line -left"></span>
+    <span class="line -bottom"></span>
+  </a>
+  <a href="instragram">
+    <span class="text">instagram</span>
+    <span class="line -right"></span>
+    <span class="line -top"></span>
+    <span class="line -left"></span>
+    <span class="line -bottom"></span>
+  </a>
+</section>
+
+
 	<main>
 	<!-- Main content here -->
 		<div class="grid">
 			<div class="mainpic"><img src="https://tinyurl.com/y62ohxzz"></div>
 
-			<div class="maincontent">Snow Bunny Cafe is a new Korean based cafe located in the Pearl District from varieties serving <i>patbingsu</i> (Korean style shaved ice), coffee, lattes, milk tea, waffles, pastries, and salads on toast with a warm and welcoming environment. It is a cute perfect spot for a study or hangout with your friends.</div>
+			<div class="maincontent"><p>Snow Bunny Cafe is a new Korean based cafe located in the Pearl District from varieties serving <i>patbingsu</i> (Korean style shaved ice), coffee, lattes, milk tea, waffles, pastries, and salads on toast with a warm and welcoming environment. It is a cute perfect spot for a study or hangout with your friends.</p></div>
 		</div>
 	</main>
 	<footer>
