link fixed into center
link fixed into center and with alanna's help, the border has been fixed and adjusted rightfully into position at each side of the links YAY! :D

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
   })(document);
 </script>
-	
+
 	<meta charset="UTF-8">
 	<title>Project One - Homepage</title>
 	<meta name="viewport" content="width=device-width">
@@ -33,48 +33,46 @@
 	<div>
 
 	
-	<nav>
+	<nav class="portfolio-experiment">
 		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
 		<ul>
 			<li><hr></li>
-			<li><a href="subpage-one.html">menu</a></li>
-			<li><a href="#">gallery</a></li>
-			<li><a href="#">location</a></li>
-			<li><a href="#">instagram</a></li>
-			<li><hr></li>
-		</ul>
-	</nav>
-
-	<section class="portfolio-experiment">
-  <a herf="menu.html">
+			<li><a herf="menu.html">
     <span class="text">menu</span>
     <span class="line -right"></span>
     <span class="line -top"></span>
     <span class="line -left"></span>
     <span class="line -bottom"></span>
-  </a>
-  <a href="gallery.html">
+  </a></li>
+			<li><a href="gallery.html">
     <span class="text">gallery</span>
     <span class="line -right"></span>
     <span class="line -top"></span>
     <span class="line -left"></span>
     <span class="line -bottom"></span>
-  </a>
+  </a></li>
+			<li> 
   <a href="location.html">
     <span class="text">location</span>
     <span class="line -right"></span>
     <span class="line -top"></span>
     <span class="line -left"></span>
     <span class="line -bottom"></span>
-  </a>
-  <a href="instragram">
+  </a></li>
+			<li><a href="instragram">
     <span class="text">instagram</span>
     <span class="line -right"></span>
     <span class="line -top"></span>
     <span class="line -left"></span>
     <span class="line -bottom"></span>
-  </a>
-</section>
+  </a></li>
+			<li><hr></li>
+		</ul>
+	</nav>
+
+	
+  
+ 
 
 
 	<main>
