need help on links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </script>
 
 	<meta charset="UTF-8">
-	<title>Project One - Homepage</title>
+	<title>Snow Bunny Cafe</title>
 	<meta name="viewport" content="width=device-width">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -23,13 +23,14 @@
 </head>
 <body>
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&display=swap" rel="stylesheet">
 	<header>
 		<img src="https://tinyurl.com/y2mxur8s" align="center">
 	</header>
 
 	<div class="siteinfo">
-		<div align="left">Portland, OR</div>
-		<div align="right">(503) 270-1711</div>
+		<div style="width: 78%; margin: 0 auto; text-align: left">Portland, OR</div>
+		<div style="width: 80%; margin: 0 auto; text-align: right">(503) 270-1711</div>
 	<div>
 
 	
@@ -80,7 +81,7 @@
 		<div class="grid">
 			<div class="mainpic"><img src="https://tinyurl.com/y62ohxzz"></div>
 
-			<div class="maincontent"><p>Snow Bunny Cafe is a new Korean based cafe located in the Pearl District from varieties serving <i>patbingsu</i> (Korean style shaved ice), coffee, lattes, milk tea, waffles, pastries, and salads on toast with a warm and welcoming environment. It is a cute perfect spot for a study or hangout with your friends.</p></div>
+			<div class="maincontent"><p>Snow Bunny Cafe is a new Korean based cafe located in the Pearl District from varieties serving patbingsu (Korean style shaved ice), coffee, lattes, milk tea, waffles, pastries, and salads on toast with a warm and welcoming environment. It is a cute perfect spot for a study or hangout with your friends.</p></div>
 		</div>
 	</main>
 	<footer>
