menu page added and updated

--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
 	<div class="siteinfo">
 		<div style="width: 78%; margin: 0 auto; text-align: left">Portland, OR</div>
 		<div style="width: 80%; margin: 0 auto; text-align: right">(503) 270-1711</div>
-	<div>
+	</div>
 
 	
 	<nav class="portfolio-experiment">
 		<!-- Global naviagtion stuff here, but move this or delete this to your liking. Same goes for the rest -->
 		<ul>
 			<li><hr></li>
-			<li><a herf="menu.html">
-    <span class="text">menu</span>
+			<li><a href="menu.html">
+    <span class="text">MENU</span>
     <span class="line -right"></span>
     <span class="line -top"></span>
     <span class="line -left"></span>
     <span class="line -bottom"></span>
   </a></li>
 			<li><a href="gallery.html">
-    <span class="text">gallery</span>
+    <span class="text">GALLERY</span>
     <span class="line -right"></span>
     <span class="line -top"></span>
     <span class="line -left"></span>
@@ -54,14 +54,14 @@
   </a></li>
 			<li> 
   <a href="location.html">
-    <span class="text">location</span>
+    <span class="text">LOCATION</span>
     <span class="line -right"></span>
     <span class="line -top"></span>
     <span class="line -left"></span>
     <span class="line -bottom"></span>
   </a></li>
 			<li><a href="instragram">
-    <span class="text">instagram</span>
+    <span class="text">INSTAGRAM</span>
     <span class="line -right"></span>
     <span class="line -top"></span>
     <span class="line -left"></span>
@@ -81,7 +81,7 @@
 		<div class="grid">
 			<div class="mainpic"><img src="https://tinyurl.com/y62ohxzz"></div>
 
-			<div class="maincontent"><p>Snow Bunny Cafe is a new Korean based cafe located in the Pearl District from varieties serving patbingsu (Korean style shaved ice), coffee, lattes, milk tea, waffles, pastries, and salads on toast with a warm and welcoming environment. It is a cute perfect spot for a study or hangout with your friends.</p></div>
+			<div class="maincontent"><p>Snow Bunny Cafe is a new Korean based cafe located in the Pearl District that consists of varieties serving from patbingsu (Korean style shaved ice), coffee, lattes, milk tea, waffles, pastries, and salads on toast with a warm and welcoming environment. It is a cute perfect spot for a study or hangout with your friends.</p></div>
 		</div>
 	</main>
 	<footer>
