--- a/location.html
+++ b/location.html
@@ -78,13 +78,22 @@
 
 	<main>
 	<!-- Main content here -->
-		<div class="grid">
-			<div class="mainpic"><img src="https://tinyurl.com/y62ohxzz"></div>
+		<div class="grid2">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2794.8510612591326!2d-122.68471448434114!3d45.53320263685744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5495a7f336204bb1%3A0x862bb1e0f1819c6a!2sSnow%20Bunny%20Cafe%20Coffee%20%26%20Tea!5e0!3m2!1sen!2sus!4v1574883147331!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 
-			<div class="maincontent"><p>
-				<h2>Welcome</h2><br><br>
+			
+				<div class="maincontent2"><link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:600&display=swap" rel="stylesheet">
+				<p>1415 NW 11th Ave, Portland, OR 97209<br>
+					(503) 270-1711<br><br>
 
-			Snow Bunny Cafe is a new Korean based cafe located in the Pearl District that consists of varieties serving from patbingsu (Korean style shaved ice), coffee, lattes, milk tea, waffles, pastries, and salads on toast with a warm and welcoming environment. It is a cute perfect spot for a study or hangout with your friends.</p></div>
+					<strong>Sunday:</strong> 7AM-5PM<br>
+					<b>Monday:</b> 6AM-6PM<br>
+					<b>Tuesday:</b> 6AM-6PM<br>
+					<b>Wednesday:</b> 6AM-6PM<br>
+					<b>Thursday:</b> 6AM-6PM<br>
+					<b>Friday:</b> 6AM-6PM<br>
+					<b>Saturday:</b> 7AM-5PM<br>
+					</p>
 		</div>
 	</main>
 	<footer>
