--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,7 @@
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&display=swap" rel="stylesheet">
 	<header>
-		<img src="https://tinyurl.com/y2mxur8s" align="center">
+		<a href="index.html"><img src="https://tinyurl.com/y2mxur8s" align="center"></a>
 	</header>
 
 	<div class="siteinfo">
@@ -60,7 +60,7 @@
     <span class="line -left"></span>
     <span class="line -bottom"></span>
   </a></li>
-			<li><a href="instragram">
+			<li><a href="https://www.instagram.com/snowbunnycafepdx/">
     <span class="text">INSTAGRAM</span>
     <span class="line -right"></span>
     <span class="line -top"></span>
@@ -93,7 +93,7 @@
 					</div>
 					<div class="back">
 						<div class="inner">
-						  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+						  <p>Handshaven shaved ice with condensed milk and fruits to add flavor. Available with mango, strawberry, and peach (seasonal).</p>
 						</div>
 					</div>
 				</div>
@@ -105,7 +105,7 @@
 					</div>
 					<div class="back">
 						<div class="inner">
-							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+							<p>Delicious milk tea that comes in varities of fruity flavors that comes with optional boba pearls.</p>
 						</div>
 					</div>
 				</div>
@@ -117,7 +117,7 @@
 					</div>
 					<div class="back">
 						<div class="inner">
-							<span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</span>
+							<span>Come in for a fresh cup of Americano to start your morning or to stay warm from cold weathers. </span>
 						</div>
 					</div>
 				</div>
@@ -129,7 +129,7 @@
 					</div>
 					<div class="back">
 						<div class="inner">
-							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+							<p>Another option for shaved ice that comes in the flavor of injeolmi which is steamed powdered dried beans.</p>
 						</div>
 					</div>
 				</div>
@@ -141,7 +141,7 @@
 					</div>
 					<div class="back">
 						<div class="inner">
-							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+							<p>Matcha latte made from fresh green tea matcha powder. Available in iced option.</p>
 						</div>
 					</div>
 				</div>
@@ -153,7 +153,7 @@
 					</div>
 					<div class="back">
 						<div class="inner">
-							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+							<p>Need to stay warm? Get yourself a fresh honey tea to warm yourself or or to soothe a sore throat. The aroma from the honey should help you feel calm and at ease.</p>
 						</div>
 					</div>
 				</div>
@@ -165,7 +165,7 @@
 					</div>
 					<div class="back">
 						<div class="inner">
-							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+							<p>Hojicha, which is a another form of Japanese tea, is a green tea that uses roasted leaves, imparting a snutty and slightly sweet taste. The caramelized undertones from the roasting process makes it an ideal candidate for brewing into a latte with steamed milk.</p>
 						</div>
 					</div>
 				</div>
@@ -177,7 +177,7 @@
 					</div>
 					<div class="back">
 						<div class="inner">
-							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+							<p>Our expresso is brewed and concentrated with finely ground coffee beans from Coava coffee and crema on top.</p>
 						</div>
 					</div>
 				</div>
@@ -190,7 +190,7 @@
 					</div>
 					<div class="back">
 						<div class="inner">
-							<span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</span>
+							<span>Recommended to drink during the hot summery days, we offer selections of refreshers with varities of fruity flavors to keep you cool during the dry weather.</span>
 						</div>
 					</div>
 				</div>
@@ -203,7 +203,7 @@
 					</div>
 					<div class="back">
 						<div class="inner">
-							<span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</span>
+							<span>Our waffles are freshly made and cooked from batches, with whipped cream sandwiched in between and sugar powder sprinkled lightly for sweetness.</span>
 						</div>
 					</div>
 				</div>
@@ -216,7 +216,7 @@
 					</div>
 					<div class="back">
 						<div class="inner">
-							<span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</span>
+							<span>We offer various selections of tea, which is recommended to drink with our freshly baked pastries.</span>
 						</div>
 					</div>
 				</div>
@@ -229,7 +229,7 @@
 					</div>
 					<div class="back">
 						<div class="inner">
-							<span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</span>
+							<span>Our salad sandwiches are made freshly everyday. Available in tuna or chicken option with a bed of arrugula on toast and sauce drizzled on top.</span>
 						</div>
 					</div>
 				</div>
@@ -242,7 +242,7 @@
 					</div>
 					<div class="back">
 						<div class="inner">
-							<span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</span>
+							<span>Our cortado is made with fresh espresso mixed with a roughly equal amount of steamed warm milk. Available in oat milk option.</span>
 						</div>
 					</div>
 				</div>
@@ -255,7 +255,7 @@
 					</div>
 					<div class="back">
 						<div class="inner">
-							<span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</span>
+							<span>Come in with a friend and chat over our delicious pastries with many drinks from our menu to choose from.</span>
 						</div>
 					</div>
 				</div>
@@ -268,7 +268,7 @@
 					</div>
 					<div class="back">
 						<div class="inner">
-							<span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</span>
+							<span>Our cappucino deliciously made from espresso with steamed milk foam or cream flavoring with cinnamon or chocolate powder. Other milk options are available.</span>
 						</div>
 					</div>
 				</div>
@@ -282,7 +282,7 @@
 					</div>
 					<div class="back">
 						<div class="inner">
-							<span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</span>
+							<span>In a rush? You can order your drinks in a bottle such as milk tea on the go. Just ask our barista!</span>
 						</div>
 					</div>
 				</div>
