--- a/location.html
+++ b/location.html
@@ -25,7 +25,7 @@
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&display=swap" rel="stylesheet">
 	<header>
-		<img src="https://tinyurl.com/y2mxur8s" align="center">
+		<a href="index.html"><img src="https://tinyurl.com/y2mxur8s" align="center"></a>
 	</header>
 
 	<div class="siteinfo">
@@ -60,7 +60,7 @@
     <span class="line -left"></span>
     <span class="line -bottom"></span>
   </a></li>
-			<li><a href="instragram">
+			<li><a href="https://www.instagram.com/snowbunnycafepdx/">
     <span class="text">INSTAGRAM</span>
     <span class="line -right"></span>
     <span class="line -top"></span>
@@ -79,7 +79,7 @@
 	<main>
 	<!-- Main content here -->
 		<div class="grid2">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2794.8510612591326!2d-122.68471448434114!3d45.53320263685744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5495a7f336204bb1%3A0x862bb1e0f1819c6a!2sSnow%20Bunny%20Cafe%20Coffee%20%26%20Tea!5e0!3m2!1sen!2sus!4v1574883147331!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2794.8510612591326!2d-122.68471448434114!3d45.53320263685744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5495a7f336204bb1%3A0x862bb1e0f1819c6a!2sSnow%20Bunny%20Cafe%20Coffee%20%26%20Tea!5e0!3m2!1sen!2sus!4v1574883147331!5m2!1sen!2sus"  frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 
 			
 				<div class="maincontent2"><link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:600&display=swap" rel="stylesheet">
