--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
 	<!-- These semantic tags were added to help you get started but you are very welcome to delete any of them and do your own thing -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&display=swap" rel="stylesheet">
 	<header>
-		<img src="https://tinyurl.com/y2mxur8s" align="center">
+		<a href="index.html"><img src="https://tinyurl.com/y2mxur8s" align="center"></a>
 	</header>
 
 	<div class="siteinfo">
@@ -60,7 +60,7 @@
     <span class="line -left"></span>
     <span class="line -bottom"></span>
   </a></li>
-			<li><a href="instragram">
+			<li><a href="https://www.instagram.com/snowbunnycafepdx/">
     <span class="text">INSTAGRAM</span>
     <span class="line -right"></span>
     <span class="line -top"></span>
